# PromobotTask

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: shapeClasses.cpp  shapeClasses.hpp  sort.cpp  sort.hpp
